@@ -80,3 +80,11 @@ HORAS TRABALHADAS: 7h
 - Ajustes no backend
 
 HORAS TRABALHADAS: 4h
+
+==========
+10/04/2009
+==========
+
+- Ajustes no backend
+
+HORAS TRABALHADAS: 2h
